@@ -1,3 +1,8 @@
+01/12/2011
+
+Added -e options to command line. There is a bug in getting options with quotes in them.
+Fixing a.s.a.p
+
 27/11/2011
 
 Modified whileTrue/whileFalse support to ensure block yield responds to ifTrue:/ifFalse:
